feat: Integrate Firebase and camera permissions
Adds Firebase SDK for backend services and requests camera permission for QR code scanning functionality. Updates import maps and types to support these integrations.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Ebotika+</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
   <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "firebase/app": "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js",
+    "firebase/storage": "https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
   }
 }
 </script>
